# bayesian-oed-opt-al

./: README.md  active_learning.ipynb  bayesian_optimisation.ipynb  optimal_experimental_design.ipynb  pyproject.toml
